# kleo-dapp

./: .env.example  README.md  context.md  milestone_plan_2.md  package-lock.json  package.json
.cursor/rules/: index.mdc
contracts/change/: Cargo.toml  lib.rs
contracts/config/: Cargo.toml  lib.rs
contracts/credit_score/: Cargo.toml  lib.rs
contracts/hydration_adapter/: Cargo.toml
contracts/loan_instance/: Cargo.toml  lib.rs
contracts/loan_manager/: Cargo.toml  lib.rs
contracts/loan_manager/config/: lib.rs
contracts/loan_manager/trust_graph/: lib.rs
contracts/loan_registry/: Cargo.toml  lib.rs
contracts/trust_graph/: Cargo.toml  lib.rs
contracts/trust_oracle/: Cargo.toml  lib.rs
contracts/yield_adapter/: Cargo.toml  lib.rs
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/src/app/: globals.css  page.tsx  (+2 more)
prisma/: schema.prisma
public/tokens/: USDT.avif
src/app/: globals.css  layout.tsx  page-router.tsx  page.tsx  router.tsx
src/components/: ConnectWalletButton.tsx  UserRoleSelectionModal.tsx
src/contracts/: deployments.ts
src/hooks/: use-borrow-data.ts  use-lend-data.ts  use-pools.ts  use-sync-wallet-state.ts  useSupabaseUser.ts
src/lib/: address-converter.ts  api.ts  constants.ts  loan-tiers.ts  loan-utils.ts  logger.ts  prisma.ts  types.ts  utils.ts
src/providers/: app-provider.tsx  error-handler-provider.tsx  kleo-client-provider.tsx  query-client-provider.tsx
src/services/: authService.ts  mockUserService.ts  polkadotAuth.ts  userService.ts
src/store/: authStore.ts  pools.store.ts  ui.store.ts  user.store.ts
src/utils/: format.ts  url.ts
(+297 files in other folders)
